# exotic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
exotic/: Cargo.toml
exotic/src/: activation.rs  dense.rs  lib.rs  prelude.rs
exotic_macro/: Cargo.toml
exotic_macro/src/: lib.rs  old_lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  main.rs  mnist_example.rs
